@@ -1,3 +1,7 @@
+* 2013-08-14 - thorben.betten@open-xchange.com
+
+ - Fix for bug 26597: Apply default charset if multipart/form-data POST request misses mail-safe encoding for non-ascii words
+
 * 2013-08-14 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 28260: Disable Hazelcast's REST and Memcache client request listener services by default 
